--- a/portfoliov2.html
+++ b/portfoliov2.html
@@ -63,7 +63,7 @@
 <div class="divide2"><!-- second section start -->	
 	<div class="who"><!-- who start -->
 			<p class="name">Andre Jarl</p>
-						<p class="prof">A 17 years old <span class= "under" id="under">Front-end Web Developer</span> based in Cebu, Philippines.</p>	
+						<p class="prof">A <span id ="age">17 years old</span> <span class= "under" id="under">Front-end Web Developer</span> based in Cebu, Philippines.</p>	
 						</div>			<!-- who end -->							
 				
 				
